syntax = "proto3";

package krane.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/krane/v1;kranev1";

// SecretsService provides decrypted secrets to running workloads.
// Called by the unkey-env binary injected into customer pods/containers.
service SecretsService {
  // GetDeploymentSecrets returns decrypted environment variables for a deployment.
  // Authentication is via a token generated at deployment creation time.
  // DEPRECATED: Use DecryptSecretsBlob instead for better performance.
  rpc GetDeploymentSecrets(GetDeploymentSecretsRequest) returns (GetDeploymentSecretsResponse);

  // DecryptSecretsBlob decrypts an encrypted secrets blob passed in the pod spec.
  // This avoids DB lookups - the encrypted blob travels with the pod.
  // Authentication is via K8s service account token or DB-stored token.
  rpc DecryptSecretsBlob(DecryptSecretsBlobRequest) returns (DecryptSecretsBlobResponse);
}

message GetDeploymentSecretsRequest {
  // The deployment ID to fetch secrets for
  string deployment_id = 1;
  // Token for authentication (generated at pod creation, validated per backend)
  string token = 2;
}

message GetDeploymentSecretsResponse {
  // Decrypted environment variables (key -> plaintext value)
  map<string, string> env_vars = 1;
}

message DecryptSecretsBlobRequest {
  // The encrypted secrets blob from the pod spec (UNKEY_SECRETS_BLOB env var).
  // This is the SecretsConfig proto, encrypted with the environment's vault keyring.
  bytes encrypted_blob = 1;

  // Environment ID (keyring) to use for decryption.
  string environment_id = 2;

  // Token for authentication (K8s service account token or DB-stored token).
  string token = 3;

  // Deployment ID for token validation.
  string deployment_id = 4;
}

message DecryptSecretsBlobResponse {
  // Decrypted environment variables (key -> plaintext value)
  map<string, string> env_vars = 1;
}
